--- a/web/2022/css_2/css_2/css/style.css
+++ b/web/2022/css_2/css_2/css/style.css
@@ -37,3 +37,59 @@ ul li {list-style: none;}
 img {vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6 {font-size: inherit; font-weight: 400;}
+
+.arial {
+   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.fontsize30 {
+   font-size: 30px;
+}
+
+.italic {
+   font-style: italic;
+}
+
+.font700 {
+   font-weight: 700;
+}
+
+.colorred {
+   color: #f00f00;
+}
+
+.textright {
+   text-align: center;
+}
+
+.decoration {
+   text-decoration: line-through;
+}
+
+.shadow {
+   text-shadow: 1px 1px 2px #000;
+}
+
+.uppercase {
+  text-transform: uppercase; 
+}
+
+.ident {
+   text-indent: 50px;
+}
+
+.lspace {
+   letter-spacing: 5px;
+}
+
+.wspace {
+   word-spacing: 10px;
+}
+
+.whitespace {
+   white-space: nowrap;
+}
+
+.lineheight {
+   line-height: 20px;
+}
