--- a/web/2022/css_2/css_2/css/style.css
+++ b/web/2022/css_2/css_2/css/style.css
@@ -40,10 +40,57 @@ h1,h2,h3,h4,h5,h6 {font-size: inherit; font-weight: 400;}
 
 body {
    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+   padding: 20px;
 }
 
-h1 {}
-h2 {}
-.text {}
-.bold {}
-.red {}
+h1 {
+   color: #445161;
+   font-size: 30px;
+}
+h2 {
+   color: #445161;
+   font-size: 25px;
+}
+.text {
+   color: #333333;
+   line-height: 25px;
+}
+.bold {
+   color: #333;
+   font-weight: 700;
+}
+.red {
+   color: #ff0000;
+}
+
+h3 {
+   color: #445161;
+   font-size: 20px
+}
+.textright {
+   text-align: right;
+}
+.caps {
+   text-transform: uppercase;
+}
+.italic {
+   font-style: italic;
+}
+.underlined {
+   text-decoration: underline;
+}
+.center {
+   text-align: center;
+}
+.bold2 {
+   font-size: large;
+}
+.crossout {
+   text-decoration: line-through;
+}
+.timesnewroman {
+   font-family: 'Times New Roman', Times, serif;
+}
+.caps2 {
+   text-shadow: 1px 1px 1px #000;
+}
