--- a/web/2022/css_4/css_4/css/style.css
+++ b/web/2022/css_4/css_4/css/style.css
@@ -38,54 +38,15 @@ img {vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6 {font-size: inherit; font-weight: 400;}
 
-.body {
-   padding: 20px;
+.example-block {
+   font-size: 30px;
+   margin: 0 0 30px 0;
 }
 
-.one {
-   line-height: 25px;
-   margin: 0 0 30px;
+.example-string {
+   font-size: 30px;
 }
 
-.two {
-   display: block;
-}
+.example-image {
 
-.three {
-   display: block;
-   box-sizing: content-box;
-   padding: 0 0 0 30px;
-   margin: 0 0 20px;
-}
-
-.four {
-   min-height: 100px;
-   width: 1500px;
-}
-
-.five {
-   display: inline;
-}
-
-.five2 {
-   display: inline;
-   line-height: 25px;
-   padding: 0 0 0 20px;
-}
-
-.six {
-   display: inline;
-   margin: 0 10px 0 0;
-   padding: 0 30px 0 30px;
-}
-
-.seven {
-   display: inline;
-   margin: 0 0 30px;
-   padding: 0 30px 0 0px;
-}
-
-.eight {
-   display: block;
-   padding: 30px 0 30px 0;
 }
