--- a/web/2022/css_4/css_4/css/style.css
+++ b/web/2022/css_4/css_4/css/style.css
@@ -39,8 +39,8 @@ img {vertical-align: top;}
 h1,h2,h3,h4,h5,h6 {font-size: inherit; font-weight: 400;}
 
 .example-block {
+   visibility: hidden;
    font-size: 30px;
-   margin: 0 0 30px 0;
 }
 
 .example-string {
@@ -48,5 +48,5 @@ h1,h2,h3,h4,h5,h6 {font-size: inherit; font-weight: 400;}
 }
 
 .example-image {
-
+   border: 5px dashed  #000;
 }
