--- a/web/2022/css_5/css_5/css/style.css
+++ b/web/2022/css_5/css_5/css/style.css
@@ -1,3 +1,4 @@
+/*-------Обнуление---------------------------------*/
 * {
    padding: 0;
    margin: 0;
@@ -37,16 +38,23 @@ ul li {list-style: none;}
 img {vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6 {font-size: inherit; font-weight: 400;}
+/*----------------------------------------*/
+body {}
 
-.example-block {
-   visibility: hidden;
-   font-size: 30px;
-}
+.one {}
 
-.example-string {
-   font-size: 30px;
-}
+.two {}
 
-.example-image {
-   border: 5px dashed  #000;
-}
+.example-image {}
+
+.three {}
+
+.four {}
+
+.list-1 {}
+
+.list-2 {}
+
+.list-3 {}
+
+.list-4 {}
