--- a/web/2022/css_5/css_5/css/style.css
+++ b/web/2022/css_5/css_5/css/style.css
@@ -53,7 +53,7 @@ body {
 
 .content-top {
    text-align: center;
-   margin: 0 0 77px 0;
+   margin: 0 0 65px 0;
 }
 
 .content-top_category {
@@ -80,6 +80,7 @@ body {
    box-shadow: 0px 15px 65px 0 rgba(15, 16, 16, 0.15);
    background-color: #fff;
    padding: 10px;
+   margin: 0 0 85px 0;
 
 }
 
@@ -99,12 +100,39 @@ body {
 }
 
 .content-bottom_text p{
-   margin: 0 0 45px 0;
+   margin: 0 0 40px 0;
 }
 
-.content-bottom-info {
+.content-bottom-info {}
+.content-bottom-info-list {  
 }
-.content-bottom-info-list {
+
+.content-bottom-info-list li{  
+   font-family: Arial, Helvetica, sans-serif; 
+   font-size: 20px; 
+   margin: 0 0 13px 0;
+   background: url('../img/icons/check\ icon.png') left no-repeat;
+   padding: 0 0 0 35px;
+}
+.content-bottom-info-list li:nth-child(1){ 
+   text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.3);
+   color: #273d46;    
+}
+.content-bottom-info-list li:nth-child(2){
+   color: #80b7b3;
+   font-style: italic;  
+}
+.content-bottom-info-list li:nth-child(3){  
+   color: #273d46;
+   font-weight: 700;
+}
+.content-bottom-info-list li:nth-child(4){    
+   color: rgba(39, 61, 70, 0.3);
+   text-decoration: line-through;
+}
+
+.content-bottom-info-list li:nth-child(4) span{
+   opacity: 1;
 }
 .content-bottom-info_link {
 }
