--- a/web/2022/css_5/css_5/css/style.css
+++ b/web/2022/css_5/css_5/css/style.css
@@ -96,11 +96,16 @@ body {
 .content-bottom_text {
   font-size: 24px;
   line-height: 40px;
-  color: rgba(39, 61, 70, 0.8)
+  color: rgba(39, 61, 70, 0.8);
+  margin: 0 0 48px 0;
 }
 
 .content-bottom_text p{
    margin: 0 0 40px 0;
+}
+
+.content-bottom_text p:last-child {
+   margin: 0;
 }
 
 .content-bottom-info {}
