--- a/web/2022/css_6/css_6/css/style.css
+++ b/web/2022/css_6/css_6/css/style.css
@@ -40,128 +40,104 @@ img {vertical-align: top;}
 h1,h2,h3,h4,h5,h6 {font-size: inherit; font-weight: 400;}
 /*----------------------------------------*/
 
-body {
-   background: #e8e8e8 url('../img/Ellipse\ 1\ copy.png') 50% 150px no-repeat;
+body{
+   padding: 30px;
 }
 
-.content {
-   padding: 168px 0 137px 0; /*Отступы 106 сверху и 137 снизу*/
-   max-width: 821px; /*ограничение по ширине*/
-   margin: 0px auto; /*внешний отступ на всех четырех сторонах элемента*/
+.block {
+   margin: 0 0 30px 0;
+}
+.block p:nth-child(odd) {
+   background-color:yellow;
+}
+.block p:nth-child(even) {
+   background-color:grey;
+}
+
+.block p{
+   font-size: 18px;
+   line-height: 24px;
+   margin: 0 0 20px 0;
 }
 
 
-.content-top {
-   text-align: center;
-   margin: 0 0 65px 0;
+.link {
+   color: red;
 }
 
-.content-top_category {
-   opacity: 0.6;
-   color: rgba(39, 61, 70, 0.6);
-   font-family: Arial, Helvetica, sans-serif;
-   font-size: 14px;
-   text-transform: uppercase;
-   letter-spacing: 2.8px;
+/*взаимодействует при наведении*/
+.link:hover { 
+   text-decoration: underline;
+   color:blue;
+}
+/*Срабатывает для посещенных ссылок*/
+.link:visited {
+   color: #008000;
+}
+
+/*срабатывает в момент клика*/
+.link:active {
+   color: yellow;
+}
+
+
+
+.text_input {
+   border: 1px solid #666;
+   height: 50px;
+   padding: 0px 15px;
+   font-size: 18px;
+   width: 300px;
    margin: 0 0 10px 0;
-  
 }
-
-.content-top_title {
-   line-height: 50px;
-   font-size: 36px;
-   color: #273d46;
-   max-width: 725px; /*73 74 строка делаем по пиксель перфект ширину как в макете и центруем*/
-   margin: 0 auto;
+/*Срабатывает при получении элементом фокуса. Часто применяется к элементам форм. Например инпутам.
+*/
+.text_input:focus {
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 
-.content-image {
-   box-shadow: 0px 15px 65px 0 rgba(15, 16, 16, 0.15);
-   background-color: #fff;
-   padding: 10px;
-   margin: 0 0 85px 0;
-
-}
-
-.content-image img{ /*обратился напрямую к картинке и указал что ты не сможешь быть больше 100% родителя. Для чего - если заказчик поменяет картинку, чтобы она подстроилась под верстку а не сломалась*/
-   max-width: 100%;
-}
-
-
-.content-bottom {
-   padding: 0 45px;
-}
-
-.content-bottom_text {
-  font-size: 24px;
-  line-height: 40px;
-  color: rgba(39, 61, 70, 0.8);
-  margin: 0 0 48px 0;
-}
-
-.content-bottom_text p{
-   margin: 0 0 40px 0;
-}
-
-.content-bottom_text p:last-child {
-   margin: 0;
-}
-
-.content-bottom-info {}
-.content-bottom-info-list {
-   margin: 0 0 59px 0;
-}
-
-.content-bottom-info-list li{  
-   font-family: Arial, Helvetica, sans-serif; 
-   font-size: 20px; 
-   margin: 0 0 15px 0;
-   background: url('../img/icons/check\ icon.png') left no-repeat;
-   padding: 0 0 0 35px;
-}
-
-.content-bottom-info-list li:last-child{
-   margin: 0;
-}
-
-
-.content-bottom-info-list li:nth-child(1){ 
-   text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.3);
-   color: #273d46;    
-}
-.content-bottom-info-list li:nth-child(2){
-   color: #80b7b3;
-   font-style: italic;  
-}
-.content-bottom-info-list li:nth-child(3){  
-   color: #273d46;
-   font-weight: 700;
-}
-.content-bottom-info-list li:nth-child(4){    
-   color: rgba(39, 61, 70, 0.3);
-   text-decoration: line-through;
-}
-
-.content-bottom-info-list li:nth-child(4) span{
-   opacity: 1;
-}
-.content-bottom-info_link {
-   background-color: #80b7b3;
-   height: 44px;
-   display: inline-block; /*это кнопка, строчный тег не действуют высоты, поэтому мы еще должны к высоте добавить это*/
-   line-height: 44px;
-   padding: 0 30px 0 27px;
-   border-radius: 30px;
-   box-shadow: 0px 6px 40px 0 rgba(128, 183, 179, 0.54);
-   font-family: Arial, Helvetica, sans-serif;
+.text_button {
+   display: block;
+   width: 300px;
+   height: 50px;
+   background-color: #666;
+   font-size: 18px;
    color: #fff;
    text-transform: uppercase;
-   letter-spacing: 2.8px;
-   font-size: 14px;
+   margin: 0 0 30px 0;
 }
 
-.content-bottom-info_link span {
-   padding: 0 30px 0 0;
-   background: url('../img/icons/Shape\ 2.png') right no-repeat
+.text_button:hover {
+   background-color: #333;
+   color: yellow;
+}
+
+.text_button:active {
+   background-color: #fff;
+   color: #333;
+}
+
+.list {
+}
+
+.list li{
+   font-size: 18px;
+   margin: 0 0 15px 0;
+
+}
+
+/*ПСЕВДОКЛАССЫ. Обращение к первому элементу в блоке*/
+.list li:first-child {
+   color: green;
+}
+/*Обращение к последнему элементу в блоке*/
+.list li:last-child {
+   color:blue;
+   font-weight: 700;
+}
+
+/*Обращение к конкретным элементам в блоке*/
+.list li:nth-child(4) {
+   text-decoration: underline;
 }
