--- a/web/2022/css_7/css_7/css/style.css
+++ b/web/2022/css_7/css_7/css/style.css
@@ -89,7 +89,22 @@ body {
    margin: 137px 0 0 0;
 }
 
-.content-header-button span{}
+.content-header-button span {
+   padding:0 30px 0 0;
+   background:url('../img/icons/Shape\ 2.png') right no-repeat;
+}
 
 .content-body {
+   margin: 40px 0 0 0;
+}
+.content-body p {
+   margin: 0 0 43px 0;
+   line-height: 1.56;
+   font-size: 18px;
+}
+.content-body p:first-child::first-line{
+   color:red;
+}
+.content-body p:last-child::first-letter{
+   color:red;
 }
