--- a/web/2022/css_7/css_7/css/style.css
+++ b/web/2022/css_7/css_7/css/style.css
@@ -56,8 +56,8 @@ body {
    font-size: 20px;
    line-height: 1.8;
    color: #273d46;
-   padding: 0 0 0 31px;
-   background: url('../img/icons/check\ icon.png') left no-repeat;
+   /*padding: 0 0 0 31px;*/
+   /*background: url('../img/icons/check\ icon.png') left no-repeat;*/
 
 }
 .content-header-list li:nth-child(1) {
@@ -72,6 +72,16 @@ body {
 .content-header-list li:nth-child(4) {
    text-transform: uppercase;
 }
+
+.content-header-list li::before{
+   content:url(../img/icons/check\ icon.png);
+   margin: 0 9px 0 0;
+}
+.content-header-list li::after{
+   content: '';
+}
+
+
 
 .content-header-button {
    height: 44px;
@@ -102,6 +112,7 @@ body {
    line-height: 1.56;
    font-size: 18px;
 }
+/*cтилизация через*/
 .content-body p:first-child::first-line{
    color:red;
 }
