--- a/web/2022/css_7/css_7/css/style.css
+++ b/web/2022/css_7/css_7/css/style.css
@@ -77,12 +77,17 @@ body {
    text-decoration: none;
 }
 
-/*Есть вопросы к отображению*/
+/*Есть вопросы к отображению
 .content-header-list li:hover:nth-child(2) {
-   /*content: none; нужно ли проверь*/
    color: #d55a5a;
    background: url('../img/icons/check-icon-red.png') left no-repeat;
 }
+*/
+.content-header-list li:nth-child(2):hover::before {
+   color: #d55a5a;
+   background: url('../img/icons/check-icon-red.png') left no-repeat;
+}
+ /*ЗАКОНЧИЛ ТУТ*/
 .content-header-list li:hover:nth-child(3) {
    font-style: normal;
 }
@@ -90,14 +95,13 @@ body {
    text-transform: none;
 }
 
-
 .content-header-list li::before{
-   content:url(../img/icons/check\ icon.png);
+   content:url('../img/icons/check\ icon.png');
    margin: 0 9px 0 0;
 }
 
 /*Нужно ли?*/
-.content-header-list li::after{
+.content-header-list li:hover:after{
    content: '';
 }
 
