--- a/web/2022/hellosass/hellosass/#source/scss/style.scss
+++ b/web/2022/hellosass/hellosass/#source/scss/style.scss
@@ -16,6 +16,7 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 /*--------------------*/
 
-body {
-   color: blue;
+.block {
+   font-size: 14px;
+   line-height: 20px;
 }
