--- a/web/2022/hellosass/hellosass/css/style.css
+++ b/web/2022/hellosass/hellosass/css/style.css
@@ -74,6 +74,13 @@ h1, h2, h3, h4, h5, h6 {
 
 /*--------------------*/
 .block {
-  font-size: 14px;
-  line-height: 20px;
+  padding: 30px;
+  font-size: 30px;
+  line-height: 60px;
+}
+.block span {
+  color: green;
+}
+.block .block_text {
+  font-size: 80px;
 }
