--- a/web/2022/hellosass/hellosass/#source/scss/style.scss
+++ b/web/2022/hellosass/hellosass/#source/scss/style.scss
@@ -17,6 +17,14 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 /*--------------------*/
 
 .block {
-   font-size: 14px;
-   line-height: 20px;
+   padding: 30px;
+   font-size: 30px;
+   line-height: 60px;
+   span {
+      color: green;
+   }
+   .block_text {
+      font-size: 80px;
+   }
 }
+// Закончил на 7.46
