--- a/web/2022/hellosass/hellosass/css/style.css
+++ b/web/2022/hellosass/hellosass/css/style.css
@@ -73,7 +73,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
+.link-2, .link {
+  border-bottom: 5px dashed red;
+}
+
 .block {
+  width: 31.25%;
+  background-color: #666;
   padding: 30px;
   font-size: 30px;
   line-height: 60px;
@@ -88,7 +94,17 @@ h1, h2, h3, h4, h5, h6 {
 .link {
   color: blue;
   text-decoration: underline;
+  font-size: 80px;
+}
+.block .link {
+  font-size: 80px;
 }
 .link:hover {
   color: green;
+}
+
+.link-2 {
+  font-size: 50px;
+  color: green;
+  border-bottom: 5px dashed #000;
 }
