--- a/web/2022/addfonts/addfonts/css/style.css
+++ b/web/2022/addfonts/addfonts/css/style.css
@@ -1,4 +1,19 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans&display=swap");
+@font-face {
+  font-family: "PFDinTextCondPro";
+  src: url("../fonts/pfdintextcondpro-regular.eot");
+  src: local("☺"), url("../fonts/pfdintextcondpro-regular.woff") format("woff"), url("../fonts/pfdintextcondpro-regular.ttf") format("truetype"), url("../fonts/8pfdintextcondpro-regular.svg") format("svg");
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: "PFDinTextCondPro";
+  src: url("../fonts/pfdintextcondpro-medium.eot");
+  src: local("☺"), url("../fonts/pfdintextcondpro-medium.woff") format("woff"), url("../fonts/pfdintextcondpro-medium.ttf") format("truetype"), url("../fonts/pfdintextcondpro-medium.svg") format("svg");
+  font-weight: 500;
+  font-style: normal;
+}
 /*Обнуление*/
 * {
   padding: 0;
@@ -73,10 +88,43 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
+.textoriginal {
+  margin: 0 0 30px 0;
+  font-size: 30px;
+  line-height: 35px;
+}
+.textoriginal p {
+  margin: 0 0 30px 0;
+}
+
 .text {
+  font-family: "PT Sans";
+  font-weight: 700;
   font-size: 30px;
   line-height: 35px;
 }
 .text p {
+  margin: 0 0 30px 0;
+}
+
+.text-PFDin {
+  font-family: "PFDinTextCondPro";
+  font-size: 30px;
+  line-height: 35px;
+  margin: 0 0 30px 0;
+}
+.text-PFDin p {
+  margin: 0 0 30px 0;
+}
+
+.text-PDFInMedium {
+  font-family: "PFDinTextCondPro";
+  font-weight: 500;
+  font-style: italic;
+  font-size: 30px;
+  line-height: 35px;
+  margin: 0 0 30px 0;
+}
+.text-PDFInMedium p {
   margin: 0 0 30px 0;
 }
